Fixed the quantity issue while fetching